# PandemicExerciseSimulator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_multiple_stochastic_sims.sh
data/: README.md
data/Alabama/: Alabama_Q1-2019_mobility-matrix.csv  Alabama_Q2-2019_mobility-matrix.csv  Alabama_Q3-2019_mobility-matrix.csv  Alabama_Q4-2019_mobility-matrix.csv  Alabama_quarterly-2019_county-connection-ranking.csv  Alabama_quarterly-2019_mobility.csv  INPUT_SEATIRD-DET_Alabama_R0-3_BASELINE.json  INPUT_SEATIRD-STOCH_Alabama_R0-3_BASELINE.json  INPUT_SEIHRD-STOCH_Alabama_R0-2.2_BASELINE.json  INPUT_SEIHRD-STOCH_Alabama_R0-2.2_VAX.json  INPUT_SEIR-DET_Alabama_R0-3_BASELINE.json  (+6 more)
helper_scipts/: run_multiple_stochastic_sims.sh
scripts/: 0_generate_US-State_inputs.R  1_county_age_pop_totals.R  2_epydemix_contact_matrix_generation.py  3a_ct_ak_crosswalks.R  3b_county_mobility_timeseries_post2020census.R  4a_flu_state_high_risk_by_age.R  4b_flu_county_high_risk_by_age.R  5_vaccine_coverage_by_state.R  6_create_input_files_and_parallel_commands.R  README.md  RNG_num_test.py  run_multiple_local_stochastic_sims.sh  run_multiple_stochastic_sims.sh
src/: simulator.py
test/: matrix_math_benchmark_test.py  test_AgeRiskVaccineStockpileStrategy.py  test_Day.py  test_DeterministicSEATIRD.py  test_DeterministicSEIRS.py  test_DiseaseModel.py  test_Group.py  test_InputProperties.py  test_InputSimulationProperties.py  test_ModelParameters.py  test_Network.py  test_Node.py  test_PopulationCompartments.py  test_RNGMath.py  test_TravelFlow.py  test_Vaccination.py  test_Writer.py
(+723 files in other folders)
