[tool.poetry]
name = "pandemic-exercise-simulator"
version = "0.1.0"
description = "Python command line implementation of a pandemic exercise simulator"
authors = ["Joe Allen <wallen@tacc.utexas.edu>",
           "Lena Duplechin Seymour <l.duplechinseymour@tacc.utexas.edu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
xmltodict = "^0.13.0"
pytest = "^8.2.0"
matplotlib = "^3.9.0"
pymongo = "^4.8.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
